Fixed overlay issue on mobile.

--- a/app/scss/_home.scss
+++ b/app/scss/_home.scss
@@ -8,6 +8,10 @@
     width: 100%;
     height: inherit;
     top: 0;
+
+    @include breakpoint(small only) {
+      top: $topbar-height;
+    }
   }
 
   .hero-text {
