--- a/app/scss/_settings.scss
+++ b/app/scss/_settings.scss
@@ -2,6 +2,7 @@ $active-navigation-link-color: orange;
 $fa-font-path:   "../dist/fonts";
 $gray-text-color: #444444;
 $gray-bg-color: #f9f9f9;
+$topbar-height: 40px;
 
 //  Foundation for Sites Settings
 //  -----------------------------
